--- a/appcast.json
+++ b/appcast.json
@@ -1,7 +1,7 @@
 {
   "itemName": "CodeWave Sketch Plugin",
-  "versionID": "1.0.6",
-  "downloadURL": "https://raw.githubusercontent.com/netease-lcap/sketch-plugin/main/codewave.sketchplugin.zip",
+  "versionID": "1.0.0",
+  "downloadURL": "https://cdn.jsdelivr.net/gh/netease-lcap/sketch-plugin/codewave.sketchplugin.zip",
   "downloadFileSize": 45136,
   "creationDate": "Mon, 5 March 2024 14:00:00"
 }
